dev/01-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: weather-app
  namespace: weather-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: weather-app
  template:
    metadata:
      labels:
        app: weather-app
    spec:
      containers:
        - name: weather-app
          image: abdelhameed208/atos-weather-app:dev-1.0.14
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
