dev/02-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: weather-app-service
  namespace: weather-app
spec:
  selector:
    app: weather-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
